[package]
name = "fuso-rpc"
version = "4.0.2"
authors = ["UINB Tech <hi@fusotao.org>"]
edition = "2021"
license = "Apache-2.0"
homepage = "https://www.fusotao.org"
repository = "https://github.com/uinb/fusotao"
description = "Fusotao RPC service"

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0" }
jsonrpc-core = "18.0.0"
jsonrpc-core-client = "18.0.0"
jsonrpc-derive = "18.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
scale-info = { version = "2.1.1", default-features = false, features = ["derive"] }
jsonrpsee = {version = "0.15.1", features = ["server", "macros"] }
tokio-tungstenite = { version = "0.18.0", features = ["native-tls"] }
tungstenite = { version = "0.18.0", features = ["native-tls"] }
async-trait = "0.1.65"
tokio = { version = "1.26.0", features = ["sync"] }
futures = "0.3.26"
http = "0.2.9"
futures-channel = "0.3.26"
dashmap = "5.4.0"
hex-literal = "0.3.4"
tracing = "0.1.34"
hyper = "0.14.25"
hex = "0.4"
rand = "0.8.5"
log = "0.4"
anyhow = "1"
async-recursion = "1.0.4"
sp-api = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.30"  }
sp-runtime = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.30"  }
sp-rpc = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.30"  }
sc-service = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.30" }
sp-keystore = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.30" }
sp-core = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.30"  }
sp-blockchain = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.30" }
sc-client-api = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.30" }
sp-application-crypto = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.30"  }
fuso-runtime-api = { path = "../runtime-api" }
