[package]
name = "fuso-runtime-api"
version = "4.0.2"
authors = ["UINB Tech"]
edition = "2021"
license = "Apache-2.0"
homepage = "https://www.fusotao.org"
repository = "https://github.com/uinb/fusotao"
description = "Fusotao runtime api"

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false }
sp-api = { default-features = false, git = "https://github.com/uinb/substrate.git", branch = "polkadot-v0.9.30"  }
sp-runtime = { default-features = false, git = "https://github.com/uinb/substrate.git", branch = "polkadot-v0.9.30"  }

[features]
default = ["std"]
std = [
    "codec/std",
    "sp-api/std",
    "sp-runtime/std",
]
