[package]
authors = ['UINB Tech']
edition = '2018'
homepage = 'https://fusotao.org'
license = "Apache-2.0"
name = 'fuso-runtime'
repository = 'https://github.com/uinb/fusotao'
version = '0.1.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[build-dependencies]
substrate-wasm-builder = '4.0.0'



[dependencies]
codec = { default-features = false, features = ['derive'], package = 'parity-scale-codec', version = '2.0.0' }
hex-literal = { optional = true, version = '0.3.1' ,default-features=false }
serde = { features = ['derive'], default-features=false, optional = true, version = '1.0.119' }

frame-benchmarking = { default-features = false, optional = true, version = '3.0.0' }
frame-executive = { default-features = false, version = '3.0.0' }
frame-support = { default-features = false, version = '3.0.0' }
frame-system = { default-features = false, version = '3.0.0' }
frame-system-benchmarking = { default-features = false, optional = true, version = '3.0.0' }
frame-system-rpc-runtime-api = { default-features = false, version = '3.0.0' }

fuso-support = { default-features = false, version = '0.1.0', path = '../fuso-support' }
fuso-pallet-elections = { path = '../pallets/elections', default-features = false, version = '0.1.0' }
#fuso-pallet-receipts = { path = '../pallets/receipts', default-features = false, version = '0.1.0' }
fuso-pallet-token = { path = '../pallets/token', default-features = false, version = '0.1.0' }
fuso-pallet-council = { path = '../pallets/council', default-features = false, version = '0.1.0' }
fuso-pallet-foundation = { path = '../pallets/foundation', default-features = false, version = '0.1.0' }
fuso-pallet-reward = { path = '../pallets/reward', default-features = false, version = '0.1.0' }
fuso-pallet-samsara = { path = '../pallets/samsara', default-features = false, version = '0.1.0' }
pallet-aura = { default-features = false, version = '3.0.0' }
pallet-session = { version = "3.0.0", default-features = false }
pallet-balances = { default-features = false, version = '3.0.0' }
pallet-grandpa = { default-features = false, version = '3.0.0' }
pallet-randomness-collective-flip = { default-features = false, version = '3.0.0' }
pallet-sudo = { default-features = false, version = '3.0.0' }
pallet-timestamp = { default-features = false, version = '3.0.0' }
pallet-authorship = { default-features = false, version = '3.0.0' }
pallet-transaction-payment = { default-features = false, version = '3.0.0' }
pallet-transaction-payment-rpc-runtime-api = { default-features = false, version = '3.0.0' }
sp-api = { default-features = false, version = '3.0.0' }
sp-block-builder = { default-features = false, version = '3.0.0' }
sp-consensus-aura = { default-features = false, version = '0.9.0' }
sp-core = { default-features = false, version = '3.0.0' }
sp-inherents = { default-features = false, version = '3.0.0' }
sp-offchain = { default-features = false, version = '3.0.0' }
sp-runtime = { default-features = false, version = '3.0.0' }
sp-session = { default-features = false, version = '3.0.0' }
sp-std = { default-features = false, version = '3.0.0' }
sp-transaction-pool = { default-features = false, version = '3.0.0' }
sp-version = { default-features = false, version = '3.0.0' }
#pallet-session = { default-features = false, version = '3.0.0' }
#pallet-octopus-appchain = { default-features = false, git = 'https://github.com/octopus-network/pallet-octopus-appchain.git' }

[features]
default = ['std']
runtime-benchmarks = [
    'hex-literal',
    'frame-benchmarking',
    'frame-support/runtime-benchmarks',
    'frame-system-benchmarking',
    'frame-system/runtime-benchmarks',
    'pallet-balances/runtime-benchmarks',
    'pallet-timestamp/runtime-benchmarks',
    'sp-runtime/runtime-benchmarks',
]
std = [
    'codec/std',
    'serde',
    'frame-executive/std',
    'frame-support/std',
    'frame-system/std',
    'frame-system-rpc-runtime-api/std',
    'fuso-pallet-elections/std',
    #'fuso-pallet-receipts/std',
    'fuso-pallet-token/std',
    'fuso-pallet-foundation/std',
    'fuso-pallet-council/std',
    'fuso-pallet-reward/std',
    'fuso-pallet-samsara/std',
    'pallet-aura/std',
    'pallet-balances/std',
    'pallet-grandpa/std',
    'pallet-randomness-collective-flip/std',
    'pallet-authorship/std',
    'pallet-sudo/std',
    'pallet-timestamp/std',
    'pallet-transaction-payment/std',
    'pallet-transaction-payment-rpc-runtime-api/std',
    'sp-api/std',
    'sp-block-builder/std',
    'sp-consensus-aura/std',
    'sp-core/std',
    'sp-inherents/std',
    'sp-offchain/std',
    'sp-runtime/std',
    'sp-session/std',
    'sp-std/std',
    'sp-transaction-pool/std',
    'sp-version/std',
    'pallet-session/std',
    #'pallet-octopus-appchain/std',

]
