[package]
name = "pallet-fuso-agent"
version = "4.0.2"
authors = ["UINB Tech"]
edition = "2021"
license = "Apache-2.0"
homepage = "https://www.fusotao.org"
repository = "https://github.com/uinb/fusotao-protocol"
description = "FUSOTAO agent pallet"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive"] }
scale-info = { version = "2.0.1", default-features = false, features = ["derive"] }
frame-system = { default-features = false, git = "https://github.com/uinb/substrate.git", branch = "polkadot-v0.9.30" }
frame-support = { default-features = false, git = "https://github.com/uinb/substrate.git", branch = "polkadot-v0.9.30" }
frame-benchmarking = { default-features = false, optional = true, git = "https://github.com/uinb/substrate.git", branch = "polkadot-v0.9.30" }
pallet-transaction-payment = { version = "4.0.0-dev", default-features = false, git = "https://github.com/uinb/substrate.git", branch = "polkadot-v0.9.30" }
sp-std = { default-features = false, git = "https://github.com/uinb/substrate.git", branch = "polkadot-v0.9.30" }
serde = { default-features = false, version = "1" }
sp-core = { default-features = false, git = "https://github.com/uinb/substrate.git", branch = "polkadot-v0.9.30" }
sp-io = { default-features = false, git = "https://github.com/uinb/substrate.git", branch = "polkadot-v0.9.30" }
sp-runtime = { default-features = false, git = "https://github.com/uinb/substrate.git", branch = "polkadot-v0.9.30" }
pallet-balances = { default-features = false, git = "https://github.com/uinb/substrate.git", branch = "polkadot-v0.9.30" }
fuso-support = { path = "../fuso-support", default-features = false }
log = { version = "0.4.14", default-features = false }
hex = { version = "0.4.3", default-features = false }

[dev-dependencies]
sp-keyring = { git = "https://github.com/uinb/substrate.git", branch = "polkadot-v0.9.30" }
pallet-balances = { git = "https://github.com/uinb/substrate.git", branch = "polkadot-v0.9.30" }
hex-literal = "0.3.4"
hex = "0.4.3"
secp256k1 = "0.24.3"

[features]
default = ['std']
std = [
    'codec/std',
    'frame-support/std',
    'frame-system/std',
    'frame-benchmarking/std',
    'pallet-transaction-payment/std',
    'sp-std/std',
    'pallet-balances/std',
    'log/std',
	'hex/std',
]
runtime-benchmarks = [
    'frame-benchmarking',
    'frame-support/runtime-benchmarks',
    'frame-system/runtime-benchmarks',
]
