[package]
name = "fuso-pallet-elections"
version = "0.1.0"
authors = ["UINB Tech"]
edition = "2018"
license = "Apache-2.0"
homepage = "https://fusotao.org"
repository = "https://github.com/uinb/fusotao"
description = "FRAME elections pallet"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
serde = { version = "1.0.101", optional = true }
codec = { package = "parity-scale-codec", version = "1.3.4", default-features = false }
sp-std = { version = "2.0.1", default-features = false }
sp-runtime = { version = "2.0.1", default-features = false }
frame-support = { version = "2.0.1", default-features = false }
frame-system = { version = "2.0.1", default-features = false }
frame-benchmarking = { version = "2.0.1", default-features = false, optional = true }
pallet-balances = { version = "2.0.1", default-features = false }
ascii = { version = "1.0", default-features = false }
fuso-support = { version = "0.1.0", path = "../../fuso-support", default-features = false }

[dev-dependencies]
sp-core = { version = "2.0.1" }
sp-std = { version = "2.0.1" }
sp-io = { version = "2.0.1" }

[features]
default = ["std"]
std = [
	"serde",
	"codec/std",
	"sp-std/std",
	"sp-runtime/std",
	"frame-support/std",
	"frame-system/std",
	"frame-benchmarking/std",
	"pallet-balances/std"
]
runtime-benchmarks = [
	"frame-benchmarking",
	"sp-runtime/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
]

