[package]
name = "pallet-fuso-token"
version = "4.0.2"
authors = ["UINB Tech"]
edition = "2021"
license = "Apache-2.0"
homepage = "https://www.fusotao.org"
repository = "https://github.com/uinb/fusotao-protocol"
description = "FUSOTAO token pallet"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { default-features = false, features = ['derive'], package = 'parity-scale-codec', version = '3.0.0' }
scale-info = { version = "2.0.1", default-features = false, features = ["derive"] }
frame-system = { default-features = false, git = "https://github.com/uinb/substrate.git", branch = "polkadot-v0.9.30" }
frame-support = { default-features = false, git = "https://github.com/uinb/substrate.git", branch = "polkadot-v0.9.30" }
frame-benchmarking = { default-features = false, optional = true, git = "https://github.com/uinb/substrate.git", branch = "polkadot-v0.9.30"}
sp-std = { default-features = false, git = "https://github.com/uinb/substrate.git", branch = "polkadot-v0.9.30" }
ascii = { version = "1.0", default-features = false }
serde = { default-features = false, version = "1.0.126" }
sp-core = { default-features = false, git = "https://github.com/uinb/substrate.git", branch = "polkadot-v0.9.30" }
sp-io = { default-features = false, git = "https://github.com/uinb/substrate.git", branch = "polkadot-v0.9.30" }
sp-runtime = { default-features = false, git = "https://github.com/uinb/substrate.git", branch = "polkadot-v0.9.30" }
pallet-balances = { default-features = false, git = "https://github.com/uinb/substrate.git", branch = "polkadot-v0.9.30" }
pallet-octopus-support = { git = "https://github.com/octopus-network/octopus-pallets.git", branch = "release-v0.9.30-1", default-features = false }
fuso-support = { path = "../fuso-support", default-features = false }

[dev-dependencies]
sp-keyring = { git = "https://github.com/uinb/substrate.git", branch = "polkadot-v0.9.30" }
pallet-balances = { git = "https://github.com/uinb/substrate.git", branch = "polkadot-v0.9.30" }

[features]
default = ['std']
std = [
    'codec/std',
    'frame-support/std',
    'frame-system/std',
    'frame-benchmarking/std',
    'sp-std/std',
    "pallet-octopus-support/std",
]
runtime-benchmarks = [
    'frame-benchmarking',
    'frame-support/runtime-benchmarks',
    'frame-system/runtime-benchmarks',
]
